# 1deuler

./: CMakeLists.txt  README.md  plot_solution.m  variables.data
src/: CMakeLists.txt  linear_solvers.f90  main.f90
